--- a/components/layout/navbar/search.module.scss
+++ b/components/layout/navbar/search.module.scss
@@ -5,23 +5,32 @@
 
 .searchContainer {
   padding-bottom: 1rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   @include desktop() {
     padding: unset;
+    position: unset;
+    top: unset;
+    left: unset;
+    width: unset;
   }
 
   .search {
     position: relative;
-    padding-top: 1rem;
+    padding-top: 0.5rem;
     @include desktop() {
       padding-top: unset;
     }
 
     .searchInputWrapper {
-      width: 0;
-      position: absolute;
-      right: 0;
+      position: relative;
       transition: opacity 0.25s;
+      height: 100%;
       @include desktop() {
+        width: 0;
+        position: absolute;
         opacity: 0.1;
         left: -2147483647px;
         height: 100%;
@@ -37,34 +46,34 @@
         }
         .searchInput {
           max-width: 100vw;
-          border: 0.125rem solid $color-darkgray;
-          border-radius: 0.2rem;
-          position: relative;
-          padding: 0 0.5rem;
-          input {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: unset;
-            padding-right: 3.75rem;
-          }
-          & > * {
-            padding: 1rem;
-          }
-          @include desktop() {
-            min-width: 20rem;
-          }
+          width: max-content;
+          min-width: 20rem;
+          box-shadow: 0 0 0.5rem 0 rgb(0 0 0 / 35%);
         }
       }
 
       .searchInput {
         position: relative;
-        width: max-content;
+        max-width: 100vw;
+        width: 100%;
+        height: 100%;
         display: grid;
         grid-template-columns: 80% 10% 10%;
-        box-shadow: 0 0 0.5rem 0 rgb(0 0 0 / 35%);
+        position: relative;
+        padding: 0 0.5rem;
+        input {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          border: 0.0625rem solid $color-darkgray;
+          border-radius: 0.2rem;
+          padding-right: 3.75rem;
+        }
+        & > * {
+          padding: 1rem;
+        }
 
         .clearInput {
           position: relative;
@@ -94,7 +103,7 @@
           &:hover {
             &::after,
             &::before {
-              background-color: $color-darkgray;
+              background-color: $color-black;
             }
           }
         }
@@ -103,14 +112,10 @@
           cursor: pointer;
           display: flex;
           justify-content: center;
-          @include desktop() {
-            padding: 1rem;
-          }
+          align-items: center;
+          padding: 1rem;
 
           .magnifyingGlass {
-            @include touch() {
-              display: none;
-            }
             position: relative;
             display: inline-block;
             background: #fff;
@@ -129,21 +134,6 @@
               left: 0.5rem;
               transform: rotate(45deg);
             }
-          }
-          &.searchButtonHidden {
-            visibility: hidden;
-          }
-        }
-        .clearInput {
-          &:hover {
-            &::after,
-            &::before {
-              background-color: $color-black;
-            }
-          }
-        }
-        .searchSubmit {
-          .magnifyingGlass {
             &:hover {
               border-color: $color-black;
 
@@ -152,13 +142,15 @@
               }
             }
           }
+          &.searchButtonHidden {
+            visibility: hidden;
+          }
         }
       }
       .autocomplete {
         position: relative;
         box-shadow: 0 0 0.5rem 0 rgb(0 0 0 / 35%);
         background-color: $color-white;
-        width: 30rem;
         padding: 0.75rem;
         max-height: 80vh;
         overflow-y: scroll;
@@ -194,6 +186,9 @@
               }
             }
           }
+        }
+        @include desktop() {
+          width: 30rem;
         }
       }
     }
